Fixing Button Alignment for add/remove users from a course
Used flex to align add/remove buttons

--- a/static/style/main.css
+++ b/static/style/main.css
@@ -111,6 +111,11 @@ body {
     width: 5vw;
 }
 
+#courseSpecificBtns {
+    display: flex;
+    justify-content: center;
+}
+
 #done {
     display: flex;
     justify-content: center;
